--- a/thoughts.html
+++ b/thoughts.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thoughts</title>
+    <link rel="icon" href="assets/icons/favicon.ico">
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <img alt="Logo of David Jeong's portfolio website" />
-      </a>
+      <a href="index.html"> ~ </a>
       <nav>
         <ul>
           <li><a href="about-me.html">about me</a></li>
@@ -25,7 +24,7 @@
         <h2>articles</h2>
         <ul>
           <li>
-            <a href="articles/cool-html.html">Some Cool Elements in HTML</a>
+            <a href="articles/html-learning-journey.html">HTML Learning Journey</a>
           </li>
         </ul>
         <a href="articles.html">see more</a>
@@ -51,9 +50,9 @@
           <li>
             <p>
               I like this quote because I believe that it is easy to forget that
-              software is built for humans. I sometimes find myself solely
+              software is built for <strong>humans</strong>. I sometimes find myself solely
               thinking about which latest technology to use to finish the
-              project as quickly as possible.
+              project as <em>quickly</em> as possible.
             </p>
             <figure>
               <blockquote>
@@ -72,22 +71,27 @@
     <footer>
       <ul>
         <li>
-          <a href="https://github.com/davidjeong0628" target="_blank"
-            ><img alt="GitHub icon"
-          /></a>
+          <a href="mailto:davidjeong0628@gmail.com">
+            <img src="assets/icons/email.svg" alt="Email">
+          </a>
         </li>
         <li>
-          <a href="mailto:davidjeong0628@gmail.com"><img alt="Email icon" /></a>
-        </li>
-        <li>
-          <a href="#" target="_blank"><img alt="Resume icon" /></a>
+          <a href="https://github.com/davidjeong0628" target="_blank">
+            <img src="assets/icons/github.svg" alt="GitHub">
+          </a>
         </li>
         <li>
           <a
             href="https://www.linkedin.com/in/david-j-b85488192/"
             target="_blank"
-            ><img alt="LinkedIn logo"
-          /></a>
+          >
+            <img src="assets/icons/linkedin.svg" alt="LinkedIn">
+          </a>
+        </li>
+        <li>
+          <a href="assets/documents/resume.pdf" target="_blank">
+            <img src="assets/icons/resume.svg" alt="Resume">
+          </a>
         </li>
       </ul>
     </footer>
