--- a/projects.html
+++ b/projects.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="icon" href="assets/icons/favicon.ico">
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <img alt="Logo of David Jeong's portfolio website" />
-      </a>
+      <a href="index.html"> ~ </a>
       <nav>
         <ul>
           <li><a href="about-me.html">about me</a></li>
@@ -41,22 +40,27 @@
     <footer>
       <ul>
         <li>
-          <a href="https://github.com/davidjeong0628" target="_blank"
-            ><img alt="GitHub icon"
-          /></a>
+          <a href="mailto:davidjeong0628@gmail.com">
+            <img src="assets/icons/email.svg" alt="Email">
+          </a>
         </li>
         <li>
-          <a href="mailto:davidjeong0628@gmail.com"><img alt="Email icon" /></a>
-        </li>
-        <li>
-          <a href="#" target="_blank"><img alt="Resume icon" /></a>
+          <a href="https://github.com/davidjeong0628" target="_blank">
+            <img src="assets/icons/github.svg" alt="GitHub">
+          </a>
         </li>
         <li>
           <a
             href="https://www.linkedin.com/in/david-j-b85488192/"
             target="_blank"
-            ><img alt="LinkedIn logo"
-          /></a>
+          >
+            <img src="assets/icons/linkedin.svg" alt="LinkedIn">
+          </a>
+        </li>
+        <li>
+          <a href="assets/documents/resume.pdf" target="_blank">
+            <img src="assets/icons/resume.svg" alt="Resume">
+          </a>
         </li>
       </ul>
     </footer>
