--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
-    <link rel="icon" href="assets/icons/favicon.ico">
+    <link rel="icon" href="assets/icons/favicon.ico" />
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/projects.css" />
   </head>
   <body>
     <header>
@@ -22,7 +24,7 @@
       <h1>projects</h1>
       <ul>
         <li>
-          <section>
+          <section class="project-listing">
             <h2>Personal Blog</h2>
             <ul>
               <li>Developed a CRUD web application for my personal blog</li>
@@ -32,7 +34,7 @@
                 access.
               </li>
             </ul>
-            <a href="https://github.com/davidjeong0628/blog">GitHub</a>
+            <a href="https://github.com/davidjeong0628/blog" target="_blank">GitHub</a>
           </section>
         </li>
       </ul>
@@ -41,12 +43,12 @@
       <ul>
         <li>
           <a href="mailto:davidjeong0628@gmail.com">
-            <img src="assets/icons/email.svg" alt="Email">
+            <img src="assets/icons/email.svg" alt="Email" />
           </a>
         </li>
         <li>
           <a href="https://github.com/davidjeong0628" target="_blank">
-            <img src="assets/icons/github.svg" alt="GitHub">
+            <img src="assets/icons/github.svg" alt="GitHub" />
           </a>
         </li>
         <li>
@@ -54,12 +56,12 @@
             href="https://www.linkedin.com/in/david-j-b85488192/"
             target="_blank"
           >
-            <img src="assets/icons/linkedin.svg" alt="LinkedIn">
+            <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
           </a>
         </li>
         <li>
           <a href="assets/documents/resume.pdf" target="_blank">
-            <img src="assets/icons/resume.svg" alt="Resume">
+            <img src="assets/icons/resume.svg" alt="Resume" />
           </a>
         </li>
       </ul>
