--- a/thoughts.html
+++ b/thoughts.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thoughts</title>
     <link rel="icon" href="assets/icons/favicon.ico">
+    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/thoughts.css" />
   </head>
   <body>
     <header>
@@ -27,11 +29,10 @@
             <a href="articles/html-learning-journey.html">HTML Learning Journey</a>
           </li>
         </ul>
-        <a href="articles.html">see more</a>
       </section>
       <section>
         <h2>quotes</h2>
-        <ul>
+        <ul class="quotes-list">
           <li>
             <p>
               I like this quote because I sometimes get lost in the details
@@ -65,7 +66,6 @@
             </figure>
           </li>
         </ul>
-        <a href="quotes.html">see more</a>
       </section>
     </main>
     <footer>
