--- a/about-me.html
+++ b/about-me.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
-    <link rel="icon" href="assets/icons/favicon.ico">
+    <link rel="icon" href="assets/icons/favicon.ico" />
+    <link rel="stylesheet" href="css/global.css" />
   </head>
   <body>
     <header>
@@ -20,7 +21,7 @@
     </header>
     <main>
       <h1>about me</h1>
-      <section>
+      <section id="bio">
         <h2>bio</h2>
         <p>
           I'm a 4th year Computer Science student at UC San Diego with an
@@ -30,7 +31,7 @@
           listen to music, and watch anime.
         </p>
       </section>
-      <section>
+      <section id="experience">
         <h2>experience</h2>
         <ol>
           <li>
@@ -84,7 +85,7 @@
           </li>
         </ol>
       </section>
-      <section>
+      <section id="education">
         <h2>education</h2>
         <section>
           <h3>B.S. in Computer Science</h3>
@@ -96,7 +97,7 @@
           </p>
         </section>
       </section>
-      <section>
+      <section id="skills">
         <h2>skills</h2>
         <section>
           <h3>languages:</h3>
@@ -122,12 +123,12 @@
       <ul>
         <li>
           <a href="mailto:davidjeong0628@gmail.com">
-            <img src="assets/icons/email.svg" alt="Email">
+            <img src="assets/icons/email.svg" alt="Email" />
           </a>
         </li>
         <li>
           <a href="https://github.com/davidjeong0628" target="_blank">
-            <img src="assets/icons/github.svg" alt="GitHub">
+            <img src="assets/icons/github.svg" alt="GitHub" />
           </a>
         </li>
         <li>
@@ -135,12 +136,12 @@
             href="https://www.linkedin.com/in/david-j-b85488192/"
             target="_blank"
           >
-            <img src="assets/icons/linkedin.svg" alt="LinkedIn">
+            <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
           </a>
         </li>
         <li>
           <a href="assets/documents/resume.pdf" target="_blank">
-            <img src="assets/icons/resume.svg" alt="Resume">
+            <img src="assets/icons/resume.svg" alt="Resume" />
           </a>
         </li>
       </ul>
