--- a/thoughts.html
+++ b/thoughts.html
@@ -6,6 +6,7 @@
     <title>Thoughts</title>
     <link rel="icon" href="assets/icons/favicon.ico">
     <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/pages.css" />
     <link rel="stylesheet" href="css/thoughts.css" />
   </head>
   <body>
@@ -26,7 +27,7 @@
         <h2>articles</h2>
         <ul>
           <li>
-            <a href="articles/html-learning-journey.html">HTML Learning Journey</a>
+            <a href="articles/css-learning-journey.html">CSS Learning Journey</a>
           </li>
         </ul>
       </section>
