--- a/about-me.html
+++ b/about-me.html
@@ -6,6 +6,8 @@
     <title>About Me</title>
     <link rel="icon" href="assets/icons/favicon.ico" />
     <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/pages.css" />
+    <link rel="stylesheet" href="css/about-me.css" />
   </head>
   <body>
     <header>
