--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Contact</title>
     <link rel="icon" href="assets/icons/favicon.ico">
     <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/pages.css" />
     <link rel="stylesheet" href="css/contact.css" />
   </head>
   <body>
