--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>Projects</title>
     <link rel="icon" href="assets/icons/favicon.ico" />
     <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="css/pages.css" />
     <link rel="stylesheet" href="css/projects.css" />
   </head>
   <body>
