--- a/about-me.html
+++ b/about-me.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="icon" href="assets/icons/favicon.ico" />
-    <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="css/pages.css" />
-    <link rel="stylesheet" href="css/about-me.css" />
+    <link rel="icon" href="assets/icons/favicon.ico">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/pages.css">
+    <link rel="stylesheet" href="css/about-me.css">
   </head>
   <body>
     <header>
@@ -125,12 +125,12 @@
       <ul>
         <li>
           <a href="mailto:davidjeong0628@gmail.com">
-            <img src="assets/icons/email.svg" alt="Email" />
+            <img src="assets/icons/email.svg" alt="Email icon" >
           </a>
         </li>
         <li>
           <a href="https://github.com/davidjeong0628" target="_blank">
-            <img src="assets/icons/github.svg" alt="GitHub" />
+            <img src="assets/icons/github.svg" alt="GitHub logo icon" >
           </a>
         </li>
         <li>
@@ -138,12 +138,12 @@
             href="https://www.linkedin.com/in/david-j-b85488192/"
             target="_blank"
           >
-            <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
+            <img src="assets/icons/linkedin.svg" alt="LinkedIn logo icon" >
           </a>
         </li>
         <li>
           <a href="assets/documents/resume.pdf" target="_blank">
-            <img src="assets/icons/resume.svg" alt="Resume" />
+            <img src="assets/icons/resume.svg" alt="Resume icon" >
           </a>
         </li>
       </ul>
