--- a/articles.html
+++ b/articles.html
@@ -25,12 +25,12 @@
         <ul>
           <li>
             <a href="mailto:davidjeong0628@gmail.com">
-              <img src="assets/icons/email.svg" alt="Email">
+              <img src="assets/icons/email.svg" alt="Email icon">
             </a>
           </li>
           <li>
             <a href="https://github.com/davidjeong0628" target="_blank">
-              <img src="assets/icons/github.svg" alt="GitHub">
+              <img src="assets/icons/github.svg" alt="GitHub logo icon">
             </a>
           </li>
           <li>
@@ -38,12 +38,12 @@
               href="https://www.linkedin.com/in/david-j-b85488192/"
               target="_blank"
             >
-              <img src="assets/icons/linkedin.svg" alt="LinkedIn">
+              <img src="assets/icons/linkedin.svg" alt="LinkedIn logo icon">
             </a>
           </li>
           <li>
             <a href="assets/documents/resume.pdf" target="_blank">
-              <img src="assets/icons/resume.svg" alt="Resume">
+              <img src="assets/icons/resume.svg" alt="Resume icon">
             </a>
           </li>
         </ul>
