--- a/thoughts.html
+++ b/thoughts.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thoughts</title>
     <link rel="icon" href="assets/icons/favicon.ico">
-    <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="css/pages.css" />
-    <link rel="stylesheet" href="css/thoughts.css" />
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/pages.css">
+    <link rel="stylesheet" href="css/thoughts.css">
   </head>
   <body>
     <header>
@@ -73,12 +73,12 @@
       <ul>
         <li>
           <a href="mailto:davidjeong0628@gmail.com">
-            <img src="assets/icons/email.svg" alt="Email">
+            <img src="assets/icons/email.svg" alt="Email icon">
           </a>
         </li>
         <li>
           <a href="https://github.com/davidjeong0628" target="_blank">
-            <img src="assets/icons/github.svg" alt="GitHub">
+            <img src="assets/icons/github.svg" alt="GitHub logo icon">
           </a>
         </li>
         <li>
@@ -86,12 +86,12 @@
             href="https://www.linkedin.com/in/david-j-b85488192/"
             target="_blank"
           >
-            <img src="assets/icons/linkedin.svg" alt="LinkedIn">
+            <img src="assets/icons/linkedin.svg" alt="LinkedIn logo icon">
           </a>
         </li>
         <li>
           <a href="assets/documents/resume.pdf" target="_blank">
-            <img src="assets/icons/resume.svg" alt="Resume">
+            <img src="assets/icons/resume.svg" alt="Resume icon">
           </a>
         </li>
       </ul>
